# sharky

./: .gitignore  CMakeLists.txt  README.md  TODO  install.sh  makefile
.github/workflows/: cmake-gtest.yml
bitmaps_out/: image2.bmp.out
data/: data_in  test.sh
include/: bitmap.h  chunker.h  configuration.h  extract.h  hide.h  info_structs.h
output_bitmaps/: image.bmp.out
src/: CMakeLists.txt  bitmap.cpp  chunker.cpp  extract.cpp  hide.cpp  main.cpp
tests/: CMakeLists.txt  bitmap_test.cpp  chunker_test.cpp  cli_test.sh  test.sh
